--- a/scanner.html
+++ b/scanner.html
@@ -7,34 +7,94 @@
     <title>SCANNER APP</title>
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
+    <script src="https://unpkg.com/html5-qrcode/minified/html5-qrcode.min.js"></script>
 </head>
 <body>
     <script src="./qrScript.js"></script>
     <div style="text-align: center;">
-
         <div id="reader" style="width: 500px;"></div>
         <div id="show" style="display: none;">
-            <h4>Numero del Producto: </h4>
+            <h4>Número del Producto: </h4>
             <p id="result"></p>
+            <div id="product-info" style="margin-top: 20px;"></div>
+            <h4>Otros Productos de la Misma Categoría (Menor Contaminación):</h4>
+            <div id="related-products"></div>
         </div>
     </div>
     <script>
-        const html5Qrcode = new Html5Qrcode('reader');
-        const qrCodeSuccessCallback = (decodedText, decodedResult)=>{
-            if(decodedText){
-                document.getElementById('show').style.display = 'block';
-                document.getElementById('result').textContent = decodedText;
-                html5Qrcode.stop();
-            }
-        }
-        const config = {fps:10, qrbox:{width:250, height:250}}
-        html5Qrcode.start({facingMode:"environment"}, config,qrCodeSuccessCallback );
+        let productInfo = {};
+
+        // Cargar productos desde el archivo JSON
+        fetch('productos.json')
+            .then(response => {
+                if (!response.ok) {
+                    throw new Error('Error al cargar el archivo JSON');
+                }
+                return response.json();
+            })
+            .then(data => {
+                productInfo = data; // Almacena la información en productInfo
+                startQRCodeScanner(); // Iniciar el escáner solo después de cargar los datos
+            })
+            .catch(error => console.error('Error:', error));
+
+        const startQRCodeScanner = () => {
+            const html5Qrcode = new Html5Qrcode('reader');
+            const qrCodeSuccessCallback = (decodedText, decodedResult) => {
+                if (decodedText) {
+                    document.getElementById('show').style.display = 'block';
+                    document.getElementById('result').textContent = decodedText;
+
+                    // Mostrar información del producto
+                    const product = productInfo[decodedText];
+                    if (product) {
+                        document.getElementById('product-info').innerHTML = `
+                            <img src="${product.imagen}" alt="${product.nombre}" style="width: 200px; height: auto;"><br>
+                            <strong>Nombre:</strong> ${product.nombre}<br>
+                            <strong>Empresa:</strong> ${product.empresa}<br>
+                            <strong>Categoría:</strong> ${product.categoria}<br>
+                            <strong>Precio:</strong> ${product.precio}<br>
+                            <strong>Nivel de Contaminación:</strong> ${product.contaminacion}
+                        `;
+
+                        // Mostrar otros productos de la misma categoría con menor contaminación
+                        showRelatedProducts(product.categoria, product.contaminacion);
+                    } else {
+                        document.getElementById('product-info').textContent = "Información no disponible.";
+                    }
+
+                    html5Qrcode.stop();
+                }
+            };
+
+            const showRelatedProducts = (categoria, currentContaminationLevel) => {
+                const relatedProductsDiv = document.getElementById('related-products');
+                relatedProductsDiv.innerHTML = ""; // Limpiar contenido anterior
+
+                for (const key in productInfo) {
+                    const relatedProduct = productInfo[key];
+                    if (relatedProduct.categoria === categoria &&
+                        relatedProduct.contaminacion < currentContaminationLevel) {
+                        relatedProductsDiv.innerHTML += `
+                            <div style="margin: 10px; display: inline-block;">
+                                <img src="${relatedProduct.imagen}" alt="${relatedProduct.nombre}" style="width: 200px; height: auto;"><br>
+                                <strong>${relatedProduct.nombre}</strong> - ${relatedProduct.empresa} (${relatedProduct.precio}, Nivel de Contaminación: ${relatedProduct.contaminacion})
+                            </div>
+                        `;
+                    }
+                }
+
+                if (relatedProductsDiv.innerHTML === "") {
+                    relatedProductsDiv.innerHTML = "<p>No hay otros productos con menor nivel de contaminación.</p>";
+                }
+            };
+
+            const config = { fps: 10, qrbox: { width: 250, height: 250 } };
+            html5Qrcode.start({ facingMode: "environment" }, config, qrCodeSuccessCallback)
+                .catch(err => {
+                    console.error("Error al iniciar el escáner QR:", err);
+                });
+        };
     </script>
 </body>
 </html>
-<!--
-
-https://barcode.tec-it.com/en/?data=1234567
-Pagina para los codigos de barras
-
--->
